--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,15 +23,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - name: Install dependencies
+        run: npm install
+      - name: Build project
+        run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # If your static files are in root folder
-          path: '.'
-          # Or if in a folder like 'public/', use:
-          # path: 'public'
+          path: 'dist'  # Adjust if your build output differs
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
