--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'dist'  # Adjust if your build output differs
+          path: 'dist'  # Ensure this matches your build output
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
