--- a/public/site.webmanifest.json
+++ b/public/site.webmanifest.json
@@ -5,22 +5,5 @@
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#f5e1e6",
-    "icons": [
-      {
-        "src": "/apple-touch-icon.png",
-        "sizes": "180x180",
-        "type": "image/png"
-      },
-      {
-        "src": "/favicon-32x32.png",
-        "sizes": "32x32",
-        "type": "image/png"
-      },
-      {
-        "src": "/favicon-16x16.png",
-        "sizes": "16x16",
-        "type": "image/png"
-      }
-    ]
+    "theme_color": "#f5e1e6"
   }
